@@ -319,7 +319,8 @@ qmake -config "${BUILD_MODE}" -spec macx-g++ "${PROJECT}" \
       QMAKE_MACOSX_DEPLOYMENT_TARGET="${MACOSX_DEPLOYMENT_TARGET}" \
       OSX_STDLIB="${STDLIB}" \
       MACPORTS_INCLUDE_PATH="${MACPORTS_PREFIX}/include" \
-      MACPORTS_LIBRARY_PATH="${MACPORTS_PREFIX}/lib"
+      MACPORTS_LIBRARY_PATH="${MACPORTS_PREFIX}/lib" \
+      MACPORTS_PREFIX="${MACPORTS_PREFIX}"
 
 phase "Running make"
 make -j2
